Fixed breakpoint text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -681,6 +681,7 @@ header {
     font-family: 'Proxima-Bold';
     color: #08243c;
     font-size: 24px;
+    text-align: center;
 }
 
 .text-sub-tagline {
